--- a/src/static/global.css
+++ b/src/static/global.css
@@ -1,10 +1,11 @@
-body {
-    font-family: 'Open Sans', sans-serif;
-}
-
 :root {
     --black: #121212;
     --white: #fafafa;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    color: var(--black);
 }
 
 #root {
